# RayTracer

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
Code/: CMakeLists.txt
Code/Gui/: CMakeLists.txt  Gui.cpp  Gui.hpp
Code/RayTracer/: Aabb.cpp  Aabb.hpp  Algebra.cpp  Algebra.hpp  Array.cpp  Array.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Color.cpp  Color.hpp  Common.cpp  Common.hpp  ConstexprFor.hpp  Eumorphic.hpp  Hittable.cpp  Hittable.hpp  Image.cpp  Image.hpp  Interval.cpp  Interval.hpp  Material.cpp  Material.hpp  Octree.cpp  Octree.hpp  Ray.cpp  Ray.hpp  ThreadPool.cpp  ThreadPool.hpp  Triangle.cpp  Triangle.hpp  TriangleMesh.cpp  TriangleMesh.hpp
Code/Test/: CMakeLists.txt
Code/Test/Test001/: CMakeLists.txt  main.cpp
Code/Test/Test002/: CMakeLists.txt  main.cpp
Code/Test/Test003/: CMakeLists.txt  main.cpp
Code/Test/Test004/: CMakeLists.txt  main.cpp
